[package]
name = "mdsite"
version = "0.1.0"
authors = ["stevelr <git@somecool.net>"]
edition = "2018"
description = "building blocks for markdown site generator"

[dependencies]
base64 = "0.13"
chrono = "0.4"
dissimilar = "1.0"
handlebars = "3.5"
ignore = "0.4"
pulldown-cmark = "0.8"
reqwest = { version="0.11", features=["json"] }
serde = { version="1.0", features=["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"
slug = "0.1"
thiserror = "1.0"
toml = "0.5"

