[package]
name = "mdsite"
version = "0.2.1"
authors = ["stevelr <git@somecool.net>"]
edition = "2018"
description = "building blocks for markdown processing and static-site gen"
license = "MIT OR Apache-2.0"
keywords = ["markdown" ,"github"]
categories = ["text-processing", "web-programming::http-server", "api-bindings"]
homepage = "https://github.com/stevelr/mdsite"
repository = "https://github.com/stevelr/mdsite"
readme = "README.md"
documentation = "https://docs.rs/mdsite"

[dependencies]
base64 = "0.13"
chrono = "0.4"
dissimilar = "1.0"
handlebars = "3.5"
ignore = "0.4"
pulldown-cmark = "0.8"
reqwest = { version="0.11", features=["json"] }
serde = { version="1.0", features=["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"
slug = "0.1"
thiserror = "1.0"
toml = "0.5"

